qutebrowser (2.5.2-1) UNRELEASED; urgency=medium

  * New upstream bugfix release.
  * Update lintian overrides for new "pointed hints" syntax, add some more
    overrides where it became even pickier, mostly about
    very-long-line-length-in-source-file and similar tags.

 -- Axel Beckert <abe@debian.org>  Wed, 22 Jun 2022 23:26:29 +0200

qutebrowser (2.5.1-1) unstable; urgency=medium

  * New upstream bugfix release.
  * Declare compliance with Debian Policy 4.6.1. (No changes needed.)
  * Update upstream signing key with new signatures to extent expiry date.

 -- Axel Beckert <abe@debian.org>  Thu, 26 May 2022 16:11:56 +0200

qutebrowser (2.5.0-1) unstable; urgency=medium

  * New upstream release.
    + Refresh sole, debian-specific patch.
  * Update copyright years in debian/copyright. Thanks Lintian!
  * Add lintian override for
    package-contains-documentation-outside-usr-share-doc
    usr/lib/python3/dist-packages/qutebrowser/html/*.html

 -- Axel Beckert <abe@debian.org>  Sun, 03 Apr 2022 16:43:31 +0200

qutebrowser (2.4.0-1) unstable; urgency=medium

  * New upstream release.
    + Add tests/end2end/data/hints/ace/ace.js to debian/copyright and
      lintian overrides.
  * Drop lintian override for no more emitted lintian tag breakout-link.
  * Declare compliance with Debian Policy 4.6.0. (No changes needed.)

 -- Axel Beckert <abe@debian.org>  Fri, 22 Oct 2021 04:23:45 +0200

qutebrowser (2.3.1-1) unstable; urgency=medium

  * New upstream bugfix release
  * Upload to unstable again.

 -- Axel Beckert <abe@debian.org>  Sun, 15 Aug 2021 15:37:04 +0200

qutebrowser (2.3.0-1) experimental; urgency=medium

  * New upstream release
  * Upload to experimental as 2.3.0-1

 -- Fritz Reichwald <reichwald@b1-systems.de>  Sat, 03 Jul 2021 20:40:33 +0200

qutebrowser (2.2.3-1) experimental; urgency=medium

  * New upstream release
  * Since 2.2.0 only qtwebengine > 5.12.0 is supported adjusted the dependency
    accordingly